<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/tvFilters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/filters_label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spSize"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tvSize"
        android:layout_toRightOf="@+id/tvFilters"
        android:entries="@array/size_spinner_items" />

    <Spinner
        android:id="@+id/spColor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spSize"
        android:layout_alignTop="@+id/tvColor"
        android:entries="@array/color_spinner_items"  />

    <Spinner
        android:id="@+id/spType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spColor"
        android:layout_alignTop="@+id/tvType"
        android:entries="@array/type_spinner_items" />
    
    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spType"
        android:layout_alignRight="@+id/spType"
        android:layout_alignTop="@+id/tvSite"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvType"
        android:layout_below="@+id/spType"
        android:layout_marginTop="17dp"
        android:text="@string/site_filter_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvColor"
        android:layout_below="@+id/spColor"
        android:layout_marginTop="17dp"
        android:text="@string/type_filter_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSize"
        android:layout_below="@+id/spSize"
        android:layout_marginTop="18dp"
        android:text="@string/color_filter_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvFilters"
        android:layout_below="@+id/tvFilters"
        android:layout_marginTop="25dp"
        android:text="@string/size_filter_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:onClick="onUpdateAction"
        android:text="@string/save_filter_btn_label" />

</RelativeLayout>
